fix(install,admin-user,ui): align button

--- a/resources/sass/probe.scss
+++ b/resources/sass/probe.scss
@@ -134,7 +134,7 @@ article {
         }
     }
     .btn {
-        display: block;
+        //display: block;
     }
 
 footer {
